[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netmap"
version = "0.1.0"
description = "Network topology auto-discovery tool. Scans subnets, fingerprints services, builds a live interactive map of all devices and open ports. Exports to JSON/HTML."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "PyJWT[crypto]>=2.8",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "email-validator>=2.0",
]

[project.scripts]
netmap = "netmap.app:create_app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "aiosqlite", "ruff", "mypy", "bandit"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
