[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netmap"
version = "0.2.0"
description = "Network scanner with service fingerprinting. Scans subnets, identifies services via banner grabbing, exports results to JSON/CSV."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "click>=8.0",
]

[project.scripts]
netmap = "netmap.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
